# pgss2022-compbio

./: CMM.py  CompBio.py  README.md  Restriction Enzyme Gel Digest Data.csv  Sequence_Analysis.py  Sequence_Processing.py  Tested w Database Lactobacillus reuteri.txt  csvAnalysis.py  primers.primers  pyproject.toml  read_fasta_example.py  read_primersearch_data.py  testData.txt  test_func.py
Database_Theoretical_Tests/: S000250675.txt  S000389347.txt  S000440732.txt  S000602438.txt  S000640764.txt  S000696481.txt  S000697948.txt  S000698076.txt  S000699073.txt  S000772994.txt  S000773696.txt  S000775165.txt  S001016686.txt  S001016944.txt  S001054730.txt  S001090146.txt  S001112668.txt  S001146285.txt  S001167294.txt  S001302549.txt  S001308938.txt  S001349888.txt  S001459273.txt  S001580198.txt  S001600884.txt  S001878534.txt  S001892482.txt  S002018185.txt  S002038007.txt  S002047793.txt  S002080458.txt  S002092215.txt  S002092306.txt  S002107395.txt  S002148269.txt  S002227369.txt  S002228101.txt  S002228157.txt  S002272852.txt  S002272978.txt  (+87 more)
Experimental_Data_Matches/: L. Brevis matches.txt  Lacticaseibacillus Casei K1 Matches.txt  Lacticaseibacillus Casei K2 Matches.txt  Lacticaseibacillus Casei K3a Matches.txt  Lacticaseibacillus Casei K3b Matches.txt  Lacticaseibacillus Casei K4a Matches.txt  Lacticaseibacillus Casei K4b Matches.txt  Lacticaseibacillus Casei K5 Matches.txt  Lacticaseibacillus Casei K6 Matches.txt  Lactobacillus Brevis Matches.txt  Lactobacillus casei matches K1.txt  Lactobacillus casei matches K2.txt  Lactobacillus casei matches K3a.txt  (+30 more)
