[tool.poetry]
name = "pgss2022-compbio"
version = "0.1.0"
description = ""
authors = ["Comp Bio Team"]

[tool.poetry.dependencies]
python = "^3.9"
biopython = "^1.79"
fasta-reader = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
